# SystemMonitoringTool

./: .gitignore  config.py  main.py  pyproject.toml  system_statistics.py
collector/: aggregator_poller.py  config.json  config.py  control_channel.py  iss.py  main.py  server_api.py  system_statistics.py  test.py
collector/data_source/: data_source.py  device_metric_gatherer.py  iss.py  system_statistics.py
common/: api_definitions.py  config.py  data_model.py
deploy/: nginx.conf  systemmonitortool.conf
frontend/: .env  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: routeTree.gen.ts
frontend/src/components/: AggregatorSummary.tsx  LineChart.tsx  MetricLineChart.tsx
frontend/src/lib/: api.ts  util.ts
frontend/src/routes/: __root.tsx  aggregator.$uuid.tsx  index.tsx
server/: main.py  manage.py
server/coreapp/: api.py  apps.py  consumers.py  models.py  routing.py  serializers.py  views.py
server/coreapp/migrations/: 0001_initial.py  0002_alter_device_uuid_alter_metric_uuid.py  0002_device_uuid.py  0003_metric_uuid.py  0003_remove_reading_device_metric_device.py  0004_metricreading_timestamp.py
server/systemmonitoringtool/: asgi.py  config.json  settings.py  urls.py  wsgi.py
